fixed modal title alignment

--- a/features/metaboxes/scss/style.scss
+++ b/features/metaboxes/scss/style.scss
@@ -2448,11 +2448,6 @@ body .mce-toolbar.mce-last .mce-container.mce-first .mce-menubtn.mce-first.mce-b
 	}
 }
 
-.media-frame-title h1 {
-	padding-left: 0;
-}
-
-
 .tooltipster-base {
 	border-color: #23282d;
 	.tooltipster-content {
